--- a/Latency/Dockerfile
+++ b/Latency/Dockerfile
@@ -1,3 +1,3 @@
 FROM ubuntu:24.04
-RUN apt update && apt -y install hping3 libcap2-bin
+RUN apt update && apt -y install hping3 libcap2-bin curl
 RUN setcap cap_net_raw+ep /usr/sbin/hping3
