--- a/Download/Dockerfile
+++ b/Download/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:24.04
-RUN apt update && apt -y install hping3 libcap2-bin curl wget
+RUN apt update && apt -y install hping3 libcap2-bin curl wget bc
 RUN setcap cap_net_raw+ep /usr/sbin/hping3
 
 # Set user to ubuntu (UID 1000)
