feat: change image

--- a/Download/cronjob-download.yaml
+++ b/Download/cronjob-download.yaml
@@ -13,7 +13,7 @@ spec:
             runAsGroup: 1000
             fsGroup: 1000
           containers:
-            - name: hping3
+            - name: download
               image: hiroominan/ubuntu:latency
               command: ["/bin/sh", "-c"]
               args:
