feat: add policy

--- a/Download/cronjob-download.yaml
+++ b/Download/cronjob-download.yaml
@@ -4,6 +4,7 @@ metadata:
   name: download-cronjob
 spec:
   schedule: "* */2 * * *"  # Setiap 2 jam
+  concurrencyPolicy: Forbid
   jobTemplate:
     spec:
       template:
