--- a/Download/cronjob-download.yaml
+++ b/Download/cronjob-download.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: download-cronjob
 spec:
-  schedule: "* */2 * * *"  # Setiap 2 jam
+  schedule: "0 */2 * * *"  # Setiap 2 jam
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
