--- a/pod-helper.yaml
+++ b/pod-helper.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hping-helper
+  name: script-helper
   namespace: default
 spec:
   securityContext:
     runAsUser: 1000  # Menjalankan pod sebagai user 1000
     runAsNonRoot: true  # Memastikan tidak berjalan sebagai root
   containers:
-  - name: pvc-helper
-    image: hiroominan/ubuntu:hping3
+  - name: script-helper
+    image: hiroominan/ubuntu:latency
     command: ["/bin/sh", "-c", "sleep infinity"]  # Agar tetap berjalan
     securityContext:
       allowPrivilegeEscalation: true  # Mencegah eskalasi privilege
