--- a/pod-helper.yaml
+++ b/pod-helper.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: script-helper
-  namespace: default
+  namespace: latency
 spec:
   securityContext:
     runAsUser: 1000  # Menjalankan pod sebagai user 1000
@@ -14,8 +14,8 @@ spec:
     securityContext:
       allowPrivilegeEscalation: true  # Mencegah eskalasi privilege
       runAsUser: 1000  # Menjalankan container sebagai user 1000
-      capabilities:
-        add: ["NET_RAW"]
+#      capabilities:
+#        add: ["NET_RAW"]
 #        add:
 #          - NET_RAW
 #        drop:
