feat: delete security contex hping3

--- a/Latency/cronjob-latency.yaml
+++ b/Latency/cronjob-latency.yaml
@@ -22,13 +22,13 @@ spec:
               volumeMounts:
                 - name: script-volume
                   mountPath: /data
-              securityContext:
-                allowPrivilegeEscalation: false
-                runAsUser: 1000
-                capabilities:
-                 drop:
-                 - ALL
-                runAsNonRoot: true
+#              securityContext:
+#                allowPrivilegeEscalation: false
+#                runAsUser: 1000
+#                capabilities:
+#                 drop:
+#                 - ALL
+#                runAsNonRoot: true
           restartPolicy: Never
           volumes:
             - name: script-volume
