--- a/Docker/cronjob-docker.yaml
+++ b/Docker/cronjob-docker.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: docker-cronjob
 spec:
-  schedule: "15 */2 * * *"  # Setiap 5 menit
+  schedule: "15 */2 * * *"  # Setiap 2 jam menit ke 15
   jobTemplate:
     spec:
       template:
@@ -14,7 +14,7 @@ spec:
             fsGroup: 1000
           containers:
             - name: docker
-              image: quay.io/skopeo/stable:latest
+              image: hiroominan/ubuntu:skopeo
               command: ["/bin/sh", "-c"]
               args:
                 - |
